--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,7 +63,7 @@ svg,img { max-width: 100%; height: auto; }
 .ds-heading{ display: inline-block; font-weight: 700; color: #000; text-transform: uppercase; letter-spacing: 1px; font-size: 16px; border-bottom: 3px solid #975a5e; padding-bottom: 7px; margin-bottom: 23px; }
 .ds-about-section p{ color: #373737; font-size: 24px; line-height: 40px; font-weight: 300; margin-bottom: 60px; }
 
-.ds-button{ display: inline-block; text-transform: uppercase;font-size: 12px;line-height: 13px;font-weight: 600;letter-spacing: 3px; color:#975a5e; padding:17px 30px;  margin-left: 5px; margin-right: 5px;border: 2px solid #975a5e;border-radius: 60px; }
+.ds-button{ display: inline-block; text-transform: uppercase;font-size: 12px;line-height: 13px;font-weight: 600;letter-spacing: 3px; color:#975a5e; padding:17px 30px;  margin: 5px;border: 2px solid #975a5e;border-radius: 60px; }
 .ds-button:hover{ background-color:#975a5e ; color: #FFF; }
 .ds-arrow-button i{ display: inline-block; vertical-align: middle; }
 /*-----------------------------------------------------------------
